# gSLIC

./: CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
