find_package(CUDA REQUIRED)
find_package(GSLIC REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(Sophus REQUIRED)
find_package(OpenCV2 REQUIRED)
find_package(HAL 0.1 REQUIRED)
find_package(PbMsgs 0.1 REQUIRED)
find_package(Protobuf REQUIRED)
find_package(Pangolin 0.1 REQUIRED)
find_package(SceneGraph 0.1 REQUIRED)
find_package(Calibu 0.1 REQUIRED)

include_directories(${CUDA_INCLUDE_DIRS})
include_directories(${GSLIC_INCLUDE_DIRS})
include_directories(${EIGEN3_INCLUDE_DIR})
include_directories(${Sophus_INCLUDE_DIR})
include_directories(${OpenCV2_INCLUDE_DIR})
include_directories(${HAL_INCLUDE_DIRS})
include_directories(${PbMsgs_INCLUDE_DIRS})
include_directories(${PROTOBUF_INCLUDE_DIRS})
include_directories(${Pangolin_INCLUDE_DIRS})
include_directories(${SceneGraph_INCLUDE_DIRS})
include_directories(${Calibu_INCLUDE_DIRS})

link_directories(${Pangolin_LIBRARY_DIRS})

list(APPEND HDRS )
list(APPEND SRCS main.cpp)

add_executable(gslic-app ${HDRS} ${SRCS})

target_link_libraries(gslic-app ${CUDA_LIBRARIES})
target_link_libraries(gslic-app ${GSLIC_LIBRARIES})
target_link_libraries(gslic-app ${OpenCV2_LIBRARIES})
target_link_libraries(gslic-app ${HAL_LIBRARIES})
target_link_libraries(gslic-app ${PbMsgs_LIBRARIES})
target_link_libraries(gslic-app ${PROTOBUF_LIBRARIES})
target_link_libraries(gslic-app ${Pangolin_LIBRARIES})
target_link_libraries(gslic-app ${SceneGraph_LIBRARIES})
target_link_libraries(gslic-app ${Calibu_LIBRARIES})
